Issue #13: 修复所有测试编译错误并更新项目管理状态
- 修复UserBehaviorServiceTest中的方法歧义问题
- 修复UserControllerTest中的构造函数和方法错误
- 修复HybridSearchServiceIntegrationTest中的类型转换错误
- 修复AutoCompleteControllerTest中的导入和方法错误
- 修复VectorSimilarityServiceTest中的类型错误
- 修复DocumentServiceTest中的泛型类型转换问题
- 更新所有analysis任务状态为完成
- 更新Epic进度为50% (4/8任务完成)
- 添加最终完成报告

所有src/test目录下的测试类现在可以正确编译